2009-09-30  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Browser/HtmlPageTest.cs: New. Unit tests

	r: rolf

2009-09-30  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Input/InputMethodTest.cs:
	  IsInputMethodEnabled defaults to true and also needs a
	  validator to ensure that it's only set on 

2009-09-29  Chris Toshok  <toshok@ximian.com>

	* System.Windows.Automation.Peers/TextBoxAutomationPeerTest.cs (ValueProvider_Events):
	call EnqueueTestComplete if we're returning early so we don't
	block indefinitely and timeout moon-unit.

	r: andreia

2009-09-29  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Browser/HtmlObjectTest.cs: New. Unit tests

	r: toshok

2009-09-29  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/TextBoxAutomationPeerTest.cs: 
	New test ValueProvider_Events.

	r: jeff

2009-09-29  Mario Carrion  <mcarrion@novell.com>

	* moon-unit.csproj: File added SWAP.PasswordBoxAutomationPeerTest.cs.
	* System.Windows.Automation.Peers/PasswordBoxAutomationPeerTest.cs: 
	New file, tests PasswordBoxAutomationPeer.

	r: spouliot

2009-09-28  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls.Primitives/SelectorTest.cs:
	  ComboBox.ItemContainerStyle and ListBox.ItemContainerStyle
	  both should update the container item Style value when they
	  change. r: spouliot

2009-09-25  Sebastien Pouliot  <sebastien@ximian.com>

	* site/index.html, site/test.html: Add dummy JS function that is
	used for ScriptObject tests

	r: andreia

2009-09-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Window.Browser/ScriptObject.cs: More test cases for
	validations.

	r: andreia

2009-09-25  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Window.Browser/HtmlWindow.cs: New. Add unit tests

	r: rolf

2009-09-21  Stephane Delcroix  <sdelcroix@novell.com>

	* System.Windows.Controls/MultiScaleIamgeTest.cs: 2 new msi tests

	r: toshok

2009-09-17  Sebastien Pouliot  <sebastien@ximian.com>
