@@ -1,3 +1,9 @@
+2009-09-30  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* security/SecuritySafeCriticalTest.cs: New. Unit tests
+
+	r: jackson
+
 2009-09-30  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* System.Windows.Browser/HtmlPageTest.cs: New. Unit tests
